# GEO1015A3

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: Ransac.cpp  Ransac.h  geom.h  main.cpp
data/: bk.laz  bk_subset1.laz  out_houghtransform.ply  out_ransac.ply  out_regiongrowing.ply  params.json
python/: opeininghd5.py  ransac.py
